--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CashCount</string>
+    <string name="onboarding_title">Gain total control \nof your money</string>
+    <string name="onboarding_subtitle">Become your own money manager \nand make every cent count</string>
+    <string name="login">Login</string>
 </resources>
