create account ui done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="lets_setup_your_account">Let\'s setup your \naccount!</string>
     <string name="account_onboarding_account_type_info">Account can be your bank, credit card or \nyour wallet.</string>
     <string name="lets_go">Let\'s go</string>
+    <string name="add_new_account">Add new account</string>
+    <string name="balance">Balance</string>
+    <string name="account_name">Account name</string>
+    <string name="account_type">Account type</string>
 </resources>
