--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="balance">Balance</string>
     <string name="account_name">Account name</string>
     <string name="account_type">Account type</string>
+    <string name="you_are_set">You are set!</string>
 </resources>
